--- a/documentation/tutorial-components.html
+++ b/documentation/tutorial-components.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="../src/assets/img/apple-icon.png" />
     <link rel="icon" type="image/png" href="../src/assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Material Dashboard Angular by Creative Tim</title>
+    <title>Now UI Dashboard Angular by Creative Tim</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
@@ -85,7 +85,7 @@
 
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand">Material Dashboard Angular  - Docs </a>
+            <a class="navbar-brand">Now UI Dashboard Angular  - Docs </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 <span class="navbar-toggler-icon"></span>
@@ -96,7 +96,7 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="https://github.com/creativetimofficial/material-dashboard-angular/issues">Have an issue?</a>
+                <a class="nav-link" href="https://github.com/creativetimofficial/now-ui-dashboard-angular/issues">Have an issue?</a>
                </li>
             </ul>
         </div>
@@ -107,12 +107,12 @@
     <div class="container">
       <div class="col-md-8 ml-auto mr-auto">
         <div class="brand">
-          <h1>Material Dashboard Angular
+          <h1>Now UI Dashboard Angular
           </h1>
 
-          <h3 class="title">Documentation v2.1.0</h3>
+          <h3 class="title">Documentation v1.0.0</h3>
           <br/>
-          <a href="http://md-angular2.creative-tim.com/documentation/tutorial" class="btn btn-white btn-round">View documentation</a>
+          <a href="http://md-angular2.creative-tim.com/documentation/tutorial" class="btn btn-white btn-round" disable>View documentation</a>
         </div>
       </div>
     </div>
