--- a/documentation/tutorial-components.html
+++ b/documentation/tutorial-components.html
@@ -10,145 +10,95 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
-    <!--  Material Dashboard CSS    -->
-    <link href="css/material-dashboard.css" rel="stylesheet" />
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
-    <link href="css/demo-documentation.css" rel="stylesheet" />
-    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-    <style>
-        pre.prettyprint {
-            background-color: #eee;
-            border: 0px;
-            margin-bottom: 60px;
-            margin-top: 30px;
-            padding: 20px;
-            text-align: left;
-        }
-
-        .atv,
-        .str {
-            color: #05AE0E;
-        }
-
-        .tag,
-        .pln,
-        .kwd {
-            color: #3472F7;
-        }
-
-        .atn {
-            color: #2C93FF;
-        }
-
-        .pln {
-            color: #333;
-        }
-
-        .com {
-            color: #999;
-        }
-
-        .space-top {
-            margin-top: 50px;
-        }
-
-        .area-line {
-            border: 1px solid #999;
-            border-left: 0;
-            border-right: 0;
-            color: #666;
-            display: block;
-            margin-top: 20px;
-            padding: 8px 0;
-            text-align: center;
-        }
-
-        .area-line a {
-            color: #666;
-        }
-
-        .container-fluid {
-            padding-right: 15px;
-            padding-left: 15px;
-        }
-    </style>
-    <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <!-- CSS Files -->
+    <link href="./css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./css/now-ui-dashboard.css?v=1.1.0" rel="stylesheet" />
+    <!-- CSS Just for demo purpose, don't include it in your project -->
+    <link href="./css/demo.css" rel="stylesheet" />
 </head>
 
-<body class="offline-doc index-page">
-  <nav class="navbar navbar-color-on-scroll navbar-transparent    fixed-top  navbar-expand-lg "  color-on-scroll="100"  id="sectionsNav">
-
+<body class="offline-doc">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute bg-primary fixed-top">
     <div class="container">
-        <div class="navbar-translate">
-            <a class="navbar-brand">Now UI Dashboard Angular  - Docs </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-            </button>
+      <div class="navbar-wrapper">
+        <div class="navbar-toggle">
+          <button type="button" class="navbar-toggler">
+            <span class="navbar-toggler-bar bar1"></span>
+            <span class="navbar-toggler-bar bar2"></span>
+            <span class="navbar-toggler-bar bar3"></span>
+          </button>
         </div>
-
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="https://github.com/creativetimofficial/now-ui-dashboard-angular/issues">Have an issue?</a>
-               </li>
-            </ul>
-        </div>
+        <a class="navbar-brand" href="#pablo">Now UI Dashboard Angular</a>
+      </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-bar navbar-kebab"></span>
+        <span class="navbar-toggler-bar navbar-kebab"></span>
+        <span class="navbar-toggler-bar navbar-kebab"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navigation">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/creativetimofficial/now-ui-dashboard-angular/issues" target="_blank">
+              Have an issue?
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
-
-  <div class="page-header header-filter clear-filter" style="background-image: url('../src/assets/img/cover.jpeg'); background-size: cover">
-    <div class="container">
+  <!-- End Navbar -->
+  <div class="page-header clear-filter" filter-color="orange">
+    <div class="page-header-image" style="background-image: url('../src/assets/img/header.jpg');"></div>
+    <div class="container text-center">
       <div class="col-md-8 ml-auto mr-auto">
         <div class="brand">
-          <h1>Now UI Dashboard Angular
+          <h1 class="title">
+            Now UI Dashboard Angular
           </h1>
-
-          <h3 class="title">Documentation v1.0.0</h3>
+          <h3 class="description">Documentation v1.0.0</h3>
           <br/>
-          <a href="http://md-angular2.creative-tim.com/documentation/tutorial" class="btn btn-white btn-round" disable>View documentation</a>
+          <a href="https://creativetimofficial.github.io/now-ui-dashboard-angular/documentation/tutorial" class="btn btn-primary btn-round btn-lg">View documentation</a>
         </div>
       </div>
     </div>
   </div>
-
-
-  <footer class="footer ">
+  <footer class="footer">
     <div class="container">
-        <nav class="pull-left">
-            <ul>
-                <li>
-                    <a href="https://www.creative-tim.com">
-                        Creative Tim
-                    </a>
-                </li>
-                <li>
-                    <a href="http://presentation.creative-tim.com">
-                       About Us
-                    </a>
-                </li>
-                <li>
-                    <a href="http://blog.creative-tim.com">
-                       Blog
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.creative-tim.com/license">
-                        Licenses
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <div class="copyright pull-right">
-            &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="material-icons">favorite</i> by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
-        </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="https://www.creative-tim.com">
+              Creative Tim
+            </a>
+          </li>
+          <li>
+            <a href="http://presentation.creative-tim.com">
+              About Us
+            </a>
+          </li>
+          <li>
+            <a href="http://blog.creative-tim.com">
+              Blog
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="copyright">
+        &copy;
+        <script>
+          document.write(new Date().getFullYear())
+        </script>, Designed by
+        <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
+        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+      </div>
     </div>
   </footer>
+  <!--   Core JS Files   -->
+  <script src="./js/jquery-3.2.1.min.js"></script>
+
+</body>
 
 </html>
